# Generated by Django 5.0.6 on 2024-06-30 13:36

from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Receipt",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("uuid", models.UUIDField(verbose_name="UUID")),
                ("date", models.DateTimeField(auto_now_add=True, verbose_name="Date")),
                (
                    "price",
                    models.DecimalField(
                        decimal_places=2, max_digits=5, verbose_name="Price"
                    ),
                ),
                (
                    "restaurant_name",
                    models.CharField(max_length=100, verbose_name="Restaurant"),
                ),
                ("address", models.CharField(max_length=250, verbose_name="Address")),
            ],
            options={
                "verbose_name": "Receipt",
                "verbose_name_plural": "Receipts",
            },
        ),
    ]
