# Generated by Django 5.0.6 on 2024-07-04 14:01

import uuid
from django.db import migrations, models


class Migration(migrations.Migration):
    dependencies = [
        ("lunch", "0006_alter_receipt_date"),
    ]

    operations = [
        migrations.CreateModel(
            name="Restaurant",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("uuid", models.UUIDField(default=uuid.uuid4, editable=False)),
                ("name", models.CharField(max_length=200)),
                ("address", models.CharField(blank=True, max_length=250, null=True)),
                ("serves_beer", models.BooleanField(default=False)),
                ("serves_breakfast", models.BooleanField(default=False)),
                ("serves_brunch", models.BooleanField(default=False)),
                ("serves_dinner", models.BooleanField(default=False)),
                ("serves_lunch", models.BooleanField(default=False)),
                ("serves_vegetarian_food", models.BooleanField(default=False)),
                ("serves_wine", models.BooleanField(default=False)),
                ("takeout", models.BooleanField(default=False)),
                ("delivery", models.BooleanField(default=False)),
                ("opening_hours", models.JSONField()),
            ],
            options={
                "verbose_name": "Restaurant",
                "verbose_name_plural": "Restaurants",
            },
        ),
        migrations.AlterField(
            model_name="receipt",
            name="date",
            field=models.DateField(),
        ),
        migrations.AlterField(
            model_name="receipt",
            name="price",
            field=models.DecimalField(decimal_places=2, max_digits=5),
        ),
        migrations.AlterField(
            model_name="receipt",
            name="restaurant_address",
            field=models.CharField(max_length=250),
        ),
        migrations.AlterField(
            model_name="receipt",
            name="restaurant_name",
            field=models.CharField(max_length=100),
        ),
        migrations.AlterField(
            model_name="receipt",
            name="uuid",
            field=models.UUIDField(default=uuid.uuid4, editable=False),
        ),
    ]
